# back-end/app/api/v1/routes/base.js
@@ -11,6 +11,7 @@ import assignmentsRouter from './assignments.js';
 import classroomsRouter from './classrooms.js';
 import equipmentRouter from './equipment.js';
 import lecturesRouter from './lectures.js';
+import announcementsRouter from './announcements.js';
 
 const v1Router = Router();
 
@@ -34,5 +35,6 @@ v1Router.use('/assignments', assignmentsRouter);
 v1Router.use('/classrooms', classroomsRouter);
 v1Router.use('/equipment', equipmentRouter);
 v1Router.use('/lectures', lecturesRouter);
+v1Router.use('/announcements', announcementsRouter);
 
 export default v1Router;
